tests/k8s_testcases/example_policies/tests-different-topologies/policy_b1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-from1-to2
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app-2
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: app-1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-from1-to0
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app-0
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: app-1
