tests/k8s_testcases/example_policies/tests-different-topologies/semanticDiff-same-topologies-scheme.yaml
namespaceList: ../../example_podlist/bank_ns_list.json
podList: ../../example_podlist/bank_pod_list.json

networkConfigList:
  - name: old1
    networkPolicyList:
      - old1.yaml
    expectedWarnings: 0

  - name: old2
    networkPolicyList:
      - old2.yaml
    expectedWarnings: 0

  - name: old3
    networkPolicyList:
      - old3.yaml
    expectedWarnings: 0

  - name: new1
    networkPolicyList:
      - new1.yaml
    expectedWarnings: 0

  - name: new1a
    networkPolicyList:
      - new1a.yaml
    expectedWarnings: 0

  - name: new2
    networkPolicyList:
      - new2.yaml
    expectedWarnings: 0

  - name: new3
    networkPolicyList:
      - new3.yaml
    expectedWarnings: 0

queries:
  - name: semantic_diff_old1_new1
    semanticDiff:
      - old1
      - new1
    expected: 2

  - name: semantic_diff_old1_new1a
    semanticDiff:
      - old1
      - new1a
    expected: 2

  - name: semantic_diff_old2_new2
    semanticDiff:
      - old2
      - new2
    expected: 2

  - name: semantic_diff_old3_new3
    semanticDiff:
      - old3
      - new3
    expected: 0
